# FTP_Server_Client

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
.github/workflows/: c-cpp.yml  cmake.yml
Source/Client/: Client.cpp  Client.h  main.cpp  test.h
Source/Common/: static.h
Source/Server/: Command.cpp  Command.h  CommandExecutor.cpp  CommandExecutor.h  Data.cpp  Data.h  Logger.cpp  Logger.h  Server.cpp  Server.h  User.cpp  User.h  main.cpp
